fixed alignment of tooltip text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1184,7 +1184,7 @@ p {
   	font-size: 15px;
   	line-height: 22px;
   	top: -48px;
-  	left: 6px;
+  	left: 10px;
   	height: 36px;
   	width: 179px;
   }
@@ -1343,7 +1343,7 @@ p {
   	font-size: 16px;
   	line-height: 24px;
   	top: -56px;
-  	left: 3px;
+  	left: 6px;
   	height: 38px;
   	width: 228px;
   }
@@ -1466,7 +1466,7 @@ p {
   	font-size: 16px;
   	line-height: 24px;
   	top: -55px;
-  	left: 5px;
+  	left: 9px;
   	height: 38px;
   	width: 262px;
   }
